Styling page, some login logic and switching view logic

--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -19,3 +19,11 @@ body{
 .navbar-border{
     border-bottom: 4px solid $primary;
 }
+
+.greenBorderSmall{
+    border-bottom: 2px solid $primary;
+}
+
+.blackBorderSmall{
+    border-bottom: 2px solid $second
+}
